ignore intermediate files.

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@
 
 .DS_Store
 lua/lua.xcodeproj/project.xcworkspace/
-lua/lua.xcodeproj/xcuserdata/zhoubao.xcuserdatad/xcschemes/xcschememanagement.plist
+lua/lua.xcodeproj/xcuserdata/
